manifests/overlays/staging/ingress-patches.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
spec:
  rules:
  - host: stag-auth-api.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 3077

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: class-service-ingress
spec:
  rules:
  - host: stag-class-api.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: class-service
              port:
                number: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: stag-application.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lecturer-service-ingress
spec:
  rules:
  - host: stag-lecturer-api.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lecturer-service
              port:
                number: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-service-ingress
spec:
  rules:
  - host: stag-student-api.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: student-service
              port:
                number: 8080
